--- a/app1/Dockerfile
+++ b/app1/Dockerfile
@@ -1,7 +1,7 @@
 # Dockerfile for App 1
 FROM node:latest
 WORKDIR /home/node/app
-COPY app1.js /home/node/app
-RUN npm init -y && npm install express
+COPY app1/* .  # Copy all files from the 'app1' folder to /home/node/app
+RUN npm install
 CMD node app1.js
 EXPOSE 8080
