--- a/app2/Dockerfile
+++ b/app2/Dockerfile
@@ -1,7 +1,7 @@
-# Dockerfile for App 2
+# Dockerfile for App 1
 FROM node:latest
 WORKDIR /home/node/app
-COPY app2.js /home/node/app
-RUN npm init -y && npm install express
-CMD node app2.js
-EXPOSE 8888
+COPY app/* .  # Copy all files from the 'app' folder to /home/node/app
+RUN npm install
+CMD node app1.js
+EXPOSE 8081
