--- a/app2/Dockerfile
+++ b/app2/Dockerfile
@@ -1,7 +1,8 @@
 # Dockerfile for App 2
 FROM node:latest
 WORKDIR /home/node/app
-COPY . .
+COPY app2/* .  # Copy all files from the 'app' folder to /home/node/app
 RUN npm install
 CMD node app2.js
 EXPOSE 8081
+
